Use the correct worker.
Summary:

Test Plan:

Reviewers:

Subscribers:

Tasks:

Tags:

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,13 +14,13 @@ concurrency:
 
 jobs:
   test:
-    name: cuda12.6-py3.10-sm90-h100
+    name: cuda12.6-py3.10-4xlarge
     strategy:
       fail-fast: true
       matrix:
         include:
-          - name: H100
-            runs-on: linux.aws.h100
+          - name: 4xlarge
+            runs-on: linux.g5.4xlarge.nvidia.gpu
             torch-spec: '--pre torch --index-url https://download.pytorch.org/whl/nightly/cu126'
             gpu-arch-type: "cuda"
             gpu-arch-version: "12.6"
