--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,8 @@ jobs:
         python -m pip install --upgrade pip
 
         # Install dependencies
-        dnf install cuda-toolkit-12-0 libnccl-devel clang-devel
+        sudo dnf update
+        sudo dnf install cuda-toolkit-12-0 libnccl-devel clang-devel
 
         # Install rust and setup nightly toolchain
         curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
