--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,8 +38,8 @@ jobs:
         python -m pip install --upgrade pip
 
         # Install dependencies
-        dnf update
-        dnf install cuda-toolkit-12-0 libnccl-devel clang-devel
+        dnf update -y
+        dnf update clang-devel -y
 
         # Install rust and setup nightly toolchain
         curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
