--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,7 @@ jobs:
         # Install Python dependencies
         pip install setuptools-rust
         pip install pyzmq requests numpy pyre-extensions
+        pip install pytest
 
         # Build and install monarch
         python setup.py install
