--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,4 +1,4 @@
-name: Build monarch wheel
+name: Build monarch wheels
 
 on:
   push:
@@ -15,10 +15,11 @@ concurrency:
 
 jobs:
   test:
-    name: cuda12.6-py3.10-4xlarge
+    name: cuda12.6-py${{ matrix.python-version }}-${{ matrix.name }}
     strategy:
-      fail-fast: true
+      fail-fast: false  # Changed to false to see results from all Python versions
       matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         include:
           - name: 4xlarge
             runs-on: linux.g5.4xlarge.nvidia.gpu
@@ -33,7 +34,7 @@ jobs:
       gpu-arch-version: ${{ matrix.gpu-arch-version }}
       submodules: recursive
       script: |
-        conda create -n venv python=3.10 -y
+        conda create -n venv python=${{ matrix.python-version }} -y
         conda activate venv
         export PATH=/opt/rh/devtoolset-10/root/usr/bin/:$PATH
         python -m pip install --upgrade pip
@@ -58,5 +59,5 @@ jobs:
         # Test dependencies
         pip install pytest cloudpickle pytest-timeout pytest-asyncio
 
-        # Build and install monarch
+        # Build wheel
         python setup.py bdist_wheel
