--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -33,6 +33,7 @@ jobs:
       gpu-arch-type: ${{ matrix.gpu-arch-type }}
       gpu-arch-version: ${{ matrix.gpu-arch-version }}
       submodules: recursive
+      upload-artifact: monarch-${{ matrix.python-version }}-${{ matrix.gpu-arch-type }}${{ matrix.gpu-arch-version }}
       script: |
         conda create -n venv python=${{ matrix.python-version }} -y
         conda activate venv
