--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -11,6 +11,7 @@ on:
       - main
     paths:
       - .github/workflows/wheels.yml
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'  # Daily at midnight UTC
 
