[1/n tensor engine] Direct Python to WorkerMessage Conversion
Pull Request resolved: https://github.com/pytorch-labs/monarch/pull/128

Previous conversion method first makes python objects that wrap rust objects, then makes WorkerMessage objects.

In doing so it copies each message at least once, and I think sometimes more.

This directly produces a WorkerMessage from the NamedTuple messages the client.py file produces. It does all the logic in rust so it is self-contained.

It should avoid issues with cloning Tensor-containing IValues inside messages since it doesn't require cloning the message.
ghstack-source-id: 287896724

Differential Revision: [D75721332](https://our.internmc.facebook.com/intern/diff/D75721332/)

--- a/monarch_extension/Cargo.toml
+++ b/monarch_extension/Cargo.toml
@@ -26,6 +26,7 @@ monarch_simulator_lib = { version = "0.0.0", path = "../monarch_simulator" }
 monarch_tensor_worker = { version = "0.0.0", path = "../monarch_tensor_worker" }
 monarch_types = { version = "0.0.0", path = "../monarch_types" }
 nccl-sys = { path = "../nccl-sys" }
+ndslice = { version = "0.0.0", path = "../ndslice" }
 pyo3 = { version = "0.22.6", features = ["anyhow"] }
 tokio = { version = "1.45.0", features = ["full", "test-util", "tracing"] }
 torch-sys = { version = "0.0.0", path = "../torch-sys" }
