[3/n tensor engine] hello tensor engine
Add the initialize controller class `mesh_controller` that can implement the tensor engine on top of the ProcMesh/ProcActor API.

The only example is currently a "hello world" that allocates and fetches a tensor.

Follow up PRs will integrate creating meshes this way into the testing code more deeply and fix the issues that come up with it.


This design assumes that supervision of stuff is going to be handled by the actor system and that tensor compute can just rely on that for monitoring and stuckness detection stuff.

This design has no ClientActor, and the ControllerActor only exists as a Instance handle for reading messages from the workers (which send some controller messages).

This does not attempt to clean up the existing RustController system yet, since it isn't feature equivalent or tested with it.

Differential Revision: [D75909313](https://our.internmc.facebook.com/intern/diff/D75909313/)

[ghstack-poisoned]

--- a/monarch_tensor_worker/Cargo.toml
+++ b/monarch_tensor_worker/Cargo.toml
@@ -16,6 +16,7 @@ cxx = "1.0.119"
 derive_more = { version = "1.0.0", features = ["full"] }
 futures = { version = "0.3.30", features = ["async-await", "compat"] }
 hyperactor = { version = "0.0.0", path = "../hyperactor" }
+hyperactor_mesh = { version = "0.0.0", path = "../hyperactor_mesh" }
 hyperactor_multiprocess = { version = "0.0.0", path = "../hyperactor_multiprocess" }
 itertools = "0.14.0"
 monarch_messages = { version = "0.0.0", path = "../monarch_messages" }
