Update on "[monarch] make torch-sys build and test on Mac"
This diff does a few things, with the end result being that `cargo test -p torch-sys` works on my macbook.

1. Test in `setup.py` whether CUDA is available and don't build CUDA stuff if it isn't.
2. Refactor torch-sys to only build CUDA-related things if the crate feature `cuda` is enabled.
3. Fix up build.rs to avoid linking against CUDA-ish if the `cuda` feature is diabled
4. Do a better job finding `libpython` in build.rs
5. Fix one test in OSS.

Differential Revision: [D76217487](https://our.internmc.facebook.com/intern/diff/D76217487/)

[ghstack-poisoned]

--- a/monarch_messages/Cargo.toml
+++ b/monarch_messages/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.185", features = ["derive", "rc"] }
 serde_bytes = "0.11"
 thiserror = "2.0.12"
 torch-sys = { version = "0.0.0", path = "../torch-sys" }
+torch-sys-cuda = { version = "0.0.0", path = "../torch-sys-cuda" }
 tracing = { version = "0.1.41", features = ["attributes", "valuable"] }
 
 [dev-dependencies]
