--- a/monarch_extension/Cargo.toml
+++ b/monarch_extension/Cargo.toml
@@ -30,4 +30,5 @@ ndslice = { version = "0.0.0", path = "../ndslice" }
 pyo3 = { version = "0.22.6", features = ["anyhow"] }
 tokio = { version = "1.45.0", features = ["full", "test-util", "tracing"] }
 torch-sys = { version = "0.0.0", path = "../torch-sys" }
+torch-sys-cuda = { version = "0.0.0", path = "../torch-sys-cuda" }
 tracing = { version = "0.1.41", features = ["attributes", "valuable"] }
