--- a/torch-sys-cuda/Cargo.toml
+++ b/torch-sys-cuda/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.0.0"
 authors = ["Meta"]
 edition = "2021"
 license = "BSD-3-Clause"
-links = "torch"
+links = "torch_cuda"
 
 [dependencies]
 async-trait = "0.1.86"
