--- a/torch-sys/Cargo.toml
+++ b/torch-sys/Cargo.toml
@@ -14,9 +14,8 @@ async-trait = "0.1.86"
 atomic_refcell = "0.1.13"
 cxx = "1.0.119"
 derive_more = { version = "1.0.0", features = ["full"] }
-fxhash = "0.2.1"
 monarch_types = { version = "0.0.0", path = "../monarch_types" }
-nccl-sys = { path = "../nccl-sys" }
+nccl-sys = { path = "../nccl-sys", optional = true }
 paste = "1.0.14"
 pyo3 = { version = "0.22.6", features = ["anyhow"] }
 regex = "1.11.1"
@@ -31,3 +30,7 @@ bincode = "1.3.3"
 [build-dependencies]
 bindgen = "0.70.1"
 cxx-build = "1.0.119"
+pyo3-build-config = "0.22.6"
+
+[features]
+cuda = ["dep:nccl-sys"]
