--- a/monarch_extension/Cargo.toml
+++ b/monarch_extension/Cargo.toml
@@ -20,10 +20,9 @@ controller = { version = "0.0.0", path = "../controller", optional = true }
 hyperactor = { version = "0.0.0", path = "../hyperactor" }
 hyperactor_extension = { version = "0.0.0", path = "../hyperactor_extension" }
 hyperactor_multiprocess = { version = "0.0.0", path = "../hyperactor_multiprocess" }
-monarch-simulator-lib = { path = "../monarch-simulator", optional = true }
 monarch_hyperactor = { version = "0.0.0", path = "../monarch_hyperactor" }
 monarch_messages = { version = "0.0.0", path = "../monarch_messages", optional = true }
-monarch_simulator_lib = { version = "0.0.0", path = "../monarch_simulator" }
+monarch_simulator_lib = { version = "0.0.0", path = "../monarch_simulator", optional = true }
 monarch_tensor_worker = { version = "0.0.0", path = "../monarch_tensor_worker", optional = true }
 monarch_types = { version = "0.0.0", path = "../monarch_types" }
 nccl-sys = { path = "../nccl-sys", optional = true }
