[monarch] make tensor_engine a crate feature of monarch_extension
Pull Request resolved: https://github.com/pytorch-labs/monarch/pull/194

Allow for conditional compilation of `tensor_engine`-related code.

This is a pre-cursor to a more substantive separation in layering of these two components.

In the end-state, `hyperactor` and `actor_mesh` shouldn't know about the tensor-engine (or torch) at all. This will help with testing, make it eeasier on environments without CUDA, etc.

This is just a convenient way to start, because it means we can turn the feature off and run Python tests to prove to ourselves there is actually no dependency, before we start a disruptive code migration.
ghstack-source-id: 289017940
@exported-using-ghexport

Differential Revision: [D76232031](https://our.internmc.facebook.com/intern/diff/D76232031/)

--- a/monarch_extension/Cargo.toml
+++ b/monarch_extension/Cargo.toml
@@ -16,19 +16,23 @@ crate-type = ["cdylib"]
 [dependencies]
 anyhow = "1.0.95"
 clap = { version = "4.5.38", features = ["derive", "env", "string", "unicode", "wrap_help"] }
-controller = { version = "0.0.0", path = "../controller" }
+controller = { version = "0.0.0", path = "../controller", optional = true }
 hyperactor = { version = "0.0.0", path = "../hyperactor" }
 hyperactor_extension = { version = "0.0.0", path = "../hyperactor_extension" }
 hyperactor_multiprocess = { version = "0.0.0", path = "../hyperactor_multiprocess" }
 monarch_hyperactor = { version = "0.0.0", path = "../monarch_hyperactor" }
-monarch_messages = { version = "0.0.0", path = "../monarch_messages" }
-monarch_simulator_lib = { version = "0.0.0", path = "../monarch_simulator" }
-monarch_tensor_worker = { version = "0.0.0", path = "../monarch_tensor_worker" }
+monarch_messages = { version = "0.0.0", path = "../monarch_messages", optional = true }
+monarch_simulator_lib = { version = "0.0.0", path = "../monarch_simulator", optional = true }
+monarch_tensor_worker = { version = "0.0.0", path = "../monarch_tensor_worker", optional = true }
 monarch_types = { version = "0.0.0", path = "../monarch_types" }
-nccl-sys = { path = "../nccl-sys" }
+nccl-sys = { path = "../nccl-sys", optional = true }
 ndslice = { version = "0.0.0", path = "../ndslice" }
 pyo3 = { version = "0.22.6", features = ["anyhow"] }
 tokio = { version = "1.45.0", features = ["full", "test-util", "tracing"] }
-torch-sys = { version = "0.0.0", path = "../torch-sys" }
-torch-sys-cuda = { version = "0.0.0", path = "../torch-sys-cuda" }
+torch-sys = { version = "0.0.0", path = "../torch-sys", optional = true }
+torch-sys-cuda = { version = "0.0.0", path = "../torch-sys-cuda", optional = true }
 tracing = { version = "0.1.41", features = ["attributes", "valuable"] }
+
+[features]
+default = ["tensor_engine"]
+tensor_engine = ["dep:controller", "dep:monarch_messages", "dep:monarch_simulator_lib", "dep:monarch_tensor_worker", "dep:nccl-sys", "dep:torch-sys", "dep:torch-sys-cuda"]
