[monarch]: unused dependencies & lints
Differential Revision: [D76511104](https://our.internmc.facebook.com/intern/diff/D76511104/)

[ghstack-poisoned]

--- a/monarch_rdma/examples/Cargo.toml
+++ b/monarch_rdma/examples/Cargo.toml
@@ -27,7 +27,9 @@ hyperactor_mesh = { version = "0.0.0", path = "../../hyperactor_mesh" }
 monarch_rdma = { version = "0.0.0", path = ".." }
 ndslice = { version = "0.0.0", path = "../../ndslice" }
 serde = { version = "1.0.185", features = ["derive", "rc"] }
-timed_test = { version = "0.0.0", path = "../../timed_test" }
 tokio = { version = "1.45.0", features = ["full", "test-util", "tracing"] }
 tracing = { version = "0.1.41", features = ["attributes", "valuable"] }
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "json", "local-time", "parking_lot", "registry"] }
+
+[dev-dependencies]
+timed_test = { version = "0.0.0", path = "../../timed_test" }
