[hyperactor] attribute dictionary
Pull Request resolved: https://github.com/pytorch-labs/monarch/pull/228

This introduces a heterogeneously typed, fixed-key, serialized attribute dictionary.

Keys are pre-declared with a type, and any attribute dictionary may contain values for any defined key. Keys are named (fully qualified), typed, and documented:

```
use std::time::Duration;
use hyperactor::attrs::Attrs;
use hyperactor::attrs::declare_key;
// Declare keys with their associated types
declare_key!(TIMEOUT, Duration, "Request timeout");
declare_key!(MAX_RETRIES, u32, "Maximum retry count");
let mut attrs = Attrs::new();
attrs.set(TIMEOUT, Duration::from_secs(30));
attrs.set(MAX_RETRIES, 3);
assert_eq!(attrs.get(TIMEOUT), Some(&Duration::from_secs(30)));
assert_eq!(attrs.get(MAX_RETRIES), Some(&3));
```

Attribute dictionaries can thus be serialized using any serde serializer, including YAML and JSON.

There are several uses of such attribute dictionaries, e.g.:

- Extensible configuration. Currently our configuration is hard-coded. This will allow us to use one configuration for the whole system, including base hyperactor, hyperactor subcrates, and monarch crates. We can now also override all values in a uniform manner.
- Message headers. We can define extensible message headers using attributes, providing an efficient, type-safe way to define, access, and transmit such metadata [1].
- Extensible specs, for example in the mesh allocators. With attributes, each allocator can specify a set of keys they support, and specs can be encoded as attr dicts which can be passed around in a uniform way -- with type-safety, uniform representation, etc.


[1] Here, we can also apply a representation trick: all headers can be reduced to a small hash. Because all keys are pre-registered, we can validate at runtime that there are no hash collisions.
ghstack-source-id: 290144042
@exported-using-ghexport

Differential Revision: [D76424536](https://our.internmc.facebook.com/intern/d

--- a/hyperactor/Cargo.toml
+++ b/hyperactor/Cargo.toml
@@ -25,6 +25,7 @@ dashmap = { version = "5.5.3", features = ["rayon", "serde"] }
 derivative = "2.2"
 dns-lookup = "1.0"
 enum-as-inner = "0.6.0"
+erased-serde = "0.3.27"
 futures = { version = "0.3.30", features = ["async-await", "compat"] }
 hostname = "0.3"
 hyperactor_macros = { version = "0.0.0", path = "../hyperactor_macros" }
