--- a/monarch_extension/Cargo.toml
+++ b/monarch_extension/Cargo.toml
@@ -14,6 +14,7 @@ doctest = false
 crate-type = ["cdylib"]
 
 [dependencies]
+actor_extension_lib = { version = "0.0.0", path = "../actor_extension" }
 anyhow = "1.0.98"
 async-trait = "0.1.86"
 clap = { version = "4.5.38", features = ["derive", "env", "string", "unicode", "wrap_help"] }
@@ -21,7 +22,6 @@ controller = { version = "0.0.0", path = "../controller", optional = true }
 hyperactor = { version = "0.0.0", path = "../hyperactor" }
 hyperactor_mesh = { version = "0.0.0", path = "../hyperactor_mesh" }
 hyperactor_multiprocess = { version = "0.0.0", path = "../hyperactor_multiprocess" }
-monarch_hyperactor = { version = "0.0.0", path = "../monarch_hyperactor" }
 monarch_messages = { version = "0.0.0", path = "../monarch_messages", optional = true }
 monarch_simulator_lib = { version = "0.0.0", path = "../monarch_simulator", optional = true }
 monarch_tensor_worker = { version = "0.0.0", path = "../monarch_tensor_worker", optional = true }
