--- a/monarch_tensor_worker/Cargo.toml
+++ b/monarch_tensor_worker/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 license = "BSD-3-Clause"
 
 [dependencies]
+actor_extension_lib = { version = "0.0.0", path = "../actor_extension" }
 anyhow = "1.0.98"
 async-trait = "0.1.86"
 bincode = "1.3.3"
@@ -19,7 +20,6 @@ hyperactor = { version = "0.0.0", path = "../hyperactor" }
 hyperactor_mesh = { version = "0.0.0", path = "../hyperactor_mesh" }
 hyperactor_multiprocess = { version = "0.0.0", path = "../hyperactor_multiprocess" }
 itertools = "0.14.0"
-monarch_hyperactor = { version = "0.0.0", path = "../monarch_hyperactor" }
 monarch_messages = { version = "0.0.0", path = "../monarch_messages" }
 monarch_types = { version = "0.0.0", path = "../monarch_types" }
 ndslice = { version = "0.0.0", path = "../ndslice" }
