Use assert_type to check for type inference failures for actor endpoints
This requires running pyright on the file in the oss test because pyre doesn't seem to care about the assert_type statement.

Differential Revision: [D78185660](https://our.internmc.facebook.com/intern/diff/D78185660/)

[ghstack-poisoned]

--- a/.github/workflows/test-cuda.yml
+++ b/.github/workflows/test-cuda.yml
@@ -47,6 +47,10 @@ jobs:
         # Install the built wheel from artifact
         install_wheel_from_artifact
 
+        # tests the type_assert statements in test_python_actor are correct
+        # pyre currently does not check these assertions
+        pyright python/tests/test_python_actors.py
+
         # Run CUDA tests
         LC_ALL=C pytest python/tests/ -s -v -m "not oss_skip"
         python python/tests/test_mock_cuda.py
