--- a/monarch_messages/Cargo.toml
+++ b/monarch_messages/Cargo.toml
@@ -12,6 +12,7 @@ anyhow = "1.0.98"
 derive_more = { version = "1.0.0", features = ["full"] }
 enum-as-inner = "0.6.0"
 hyperactor = { version = "0.0.0", path = "../hyperactor" }
+monarch_hyperactor = { version = "0.0.0", path = "../monarch_hyperactor" }
 monarch_types = { version = "0.0.0", path = "../monarch_types" }
 ndslice = { version = "0.0.0", path = "../ndslice" }
 pyo3 = { version = "0.24", features = ["anyhow", "multiple-pymethods"] }
