--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -21,7 +21,7 @@ jobs:
         include:
           - name: 4xlarge
             runs-on: linux.g5.4xlarge.nvidia.gpu
-            install-args: '--pre --index-url https://download.pytorch.org/whl/nightly/cu126'
+            install-args: '--pre --extra-index-url https://download.pytorch.org/whl/nightly/cu126'
             gpu-arch-type: "cuda"
             gpu-arch-version: "12.6"
     uses: pytorch/test-infra/.github/workflows/linux_job_v2.yml@main
