[hyperactor] Actor derive macro
Pull Request resolved: https://github.com/meta-pytorch/monarch/pull/837

We have many trivial `Actor` implementations. (Usually, the the actor's handlers are more involved.)

We add a derive macro for actors, supporting two patterns:

1) "empty params", where we use the actors Default::default implementation to create a new actor;
2) "passthrough actor", where the params themselves are simply an actor instance which we immediately return

This change introduces the macro and adjusts usages throughout our code base.
ghstack-source-id: 302711475
@exported-using-ghexport

Differential Revision: [D80139026](https://our.internmc.facebook.com/intern/diff/D80139026/)

--- a/hyperactor_macros/Cargo.toml
+++ b/hyperactor_macros/Cargo.toml
@@ -30,6 +30,7 @@ anyhow = "1.0.98"
 async-trait = "0.1.86"
 hyperactor = { version = "0.0.0", path = "../hyperactor" }
 serde = { version = "1.0.185", features = ["derive", "rc"] }
+static_assertions = "1.1.0"
 timed_test = { version = "0.0.0", path = "../timed_test" }
 tokio = { version = "1.37.0", features = ["full", "test-util", "tracing"] }
 tracing = { version = "0.1.41", features = ["attributes", "valuable"] }
