[hyperactor] multipart support for Serialized
Pull Request resolved: https://github.com/meta-pytorch/monarch/pull/946

In this change, we add a multipart encoding for Serialized. This will allow us to serialize values with the new multipart encoder.

To support this, we introduce two API changes:

- an Encoding enum that codifies the different support encodings; and
- a new constructor that lets the user specify the encoding to use
ghstack-source-id: 305028345
@exported-using-ghexport

Differential Revision: [D80704705](https://our.internmc.facebook.com/intern/diff/D80704705/)

--- a/hyperactor/Cargo.toml
+++ b/hyperactor/Cargo.toml
@@ -57,6 +57,7 @@ rustls-pemfile = "1.0.0"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_bytes = "0.11"
 serde_json = { version = "1.0.140", features = ["alloc", "float_roundtrip", "raw_value", "unbounded_depth"] }
+serde_multipart = { version = "0.0.0", path = "../serde_multipart" }
 serde_with = { version = "3", features = ["hex", "json"] }
 serde_yaml = "0.9.25"
 signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
