--- a/serde_multipart/Cargo.toml
+++ b/serde_multipart/Cargo.toml
@@ -13,3 +13,7 @@ license = "BSD-3-Clause"
 bincode = "1.3.3"
 bytes = { version = "1.10", features = ["serde"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
+
+[dev-dependencies]
+proptest = "1.5"
+proptest-derive = "0.5"
