--- a/torch-sys/Cargo.toml
+++ b/torch-sys/Cargo.toml
@@ -15,6 +15,7 @@ atomic_refcell = "0.1.13"
 bincode = "1.3.3"
 cxx = "1.0.119"
 derive_more = { version = "1.0.0", features = ["full"] }
+hyperactor = { version = "0.0.0", path = "../hyperactor" }
 monarch_types = { version = "0.0.0", path = "../monarch_types" }
 nccl-sys = { path = "../nccl-sys", optional = true }
 paste = "1.0.14"
