[monarch] Fix mock cuda test in github CI
Mocking cuda relies on matching against an expected sequence of bytes at the start of each cuda driver function. If `libcuda.so.1` was compiled without the `-fomit-frame-pointer` flag, then there will be additional bytes at the start to deal with the frame pointer. `mock_cuda.cpp` now takes into account this case as well.

Differential Revision: [D82129347](https://our.internmc.facebook.com/intern/diff/D82129347/)

**NOTE FOR REVIEWERS**: This PR has internal Meta-specific changes or comments, please review them on [Phabricator](https://our.internmc.facebook.com/intern/diff/D82129347/)!

[ghstack-poisoned]

--- a/.github/workflows/test-cuda.yml
+++ b/.github/workflows/test-cuda.yml
@@ -58,6 +58,4 @@ jobs:
 
         # Run CUDA tests
         LC_ALL=C pytest python/tests/ -s -v -m "not oss_skip"
-        # TODO(meriksen): temporarily disabled to unblock lands while debugging
-        # mock CUDA issues on the OSS setup
-        # python python/tests/test_mock_cuda.py
+        python python/tests/test_mock_cuda.py
