[monarch] new crate: erased_lifetime
The intent is to use this crate to ship rust Instance/Contexts into Python.

```
/// This crate implements scoped lifetime-erasure.
///
/// Its intended use is when you hold a reference with a well-defined scope,
/// but you want to pass it around to APIs where threading through lifetime
/// parameters is awkward, for example across Rust/Python FFI boundaries, but
/// you can nevertheless guarantee that the reference is not used after the
/// the scope exits.
///
/// Erased references are safe to use, but incorrect usage causes the relevant
/// thread to halt, as we cannot safely drop a keepalive associated with an
/// extant reference.
///
/// The crate provides a single function: [`erase`], which returns a [`Keepalive`]
/// token, with the lifetime of the erased reference, and [`Ref`], the reference
/// itself. The user must guarantee that the reference does not outlive the the
/// keepalive token; otherwise the program halts. Because [`Keepalive`] is parameterized
/// on the reference lifetime, it is guaranteed by the compiler not to outlive it,
/// and thus transitively we can guarantee that [`Ref`] access is safe.
///
/// [`Ref`] *only* provides lifetime erasure, and can be combined with other cell
/// types to provide interior mutability, dynamic borrow checking, etc.
///
/// ## Usage
///
/// ```
/// fn outer(x: &u32) {
///     let (keepalive, ref_) = erased_lifetime::erase(x);
///     inner(ref_);
/// }
///
/// fn inner(x: erased_lifetime::Ref<u32>) {
///     assert_eq!(*x, 42);
/// }
///
/// let data = 42u32;
/// outer(&data);
/// ```
```

Differential Revision: [D82221284](https://our.internmc.facebook.com/intern/diff/D82221284/)

[ghstack-poisoned]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "controller",
     "cuda-sys",
+    "erased_lifetime",
     "hyper",
     "hyperactor",
     "hyperactor_macros",
