[monarch][hyperactor] Move Instance<A>'s public API into InstanceCell<A> and introduce ErasedInstanceCell
The existing implementation of the new `context::Actor` trait and the way it's required for spawning new meshes isn't compatible with the way our python actors are implemented. Only `Context<A>`, `&Context<A>`, `Instance<A>` and `&Instance<A>` implement `context::Actor`, but there isn't any way to plumb these through python due to rust's ownership/lifetime system.

To address this, this diff makes the following changes:
- Rename `InstanceCell` --> `ErasedInstanceCell`, to highlight that this specifically contains *type-erased* state associated with an actor instance.
- Move an actor instance's mailbox and owning proc out of `Instance<A>` and into `ErasedInstanceCell`. This enables us to build all of `Instance<A>`'s public API on top of `ErasedInstanceCell`.
- Introduce `InstanceCell<A>`, which wraps `ErasedInstanceCell` and the actor's `Ports<A>`. This allows us to move all of `Instance<A>`'s public API into `InstanceCell<A>`, while implementing `Deref` for `Instance<A>` where `Target = InstanceCell<A>` so that call sites that use `Instance<A>` will automatically delegate to `InstanceCell<A>`.
- Implement `context::Actor` for `InstanceCell<A>` and `&InstanceCell<A>`. Because the former implements `Clone` and its internal state is all wrapped in `Arc`, it is safe to plumb through python.

Differential Revision: [D82336998](https://our.internmc.facebook.com/intern/diff/D82336998/)

[ghstack-poisoned]

--- a/hyperactor/Cargo.toml
+++ b/hyperactor/Cargo.toml
@@ -40,6 +40,7 @@ derivative = "2.2"
 dns-lookup = "1.0"
 enum-as-inner = "0.6.0"
 erased-serde = "0.3.27"
+erased_lifetime = { version = "0.0.0", path = "../erased_lifetime" }
 futures = { version = "0.3.31", features = ["async-await", "compat"] }
 hostname = "0.3"
 hyperactor_macros = { version = "0.0.0", path = "../hyperactor_macros" }
