--- a/hyperactor_mesh/Cargo.toml
+++ b/hyperactor_mesh/Cargo.toml
@@ -38,6 +38,7 @@ path = "test/process_allocator_cleanup/process_allocator_cleanup.rs"
 [dependencies]
 anyhow = "1.0.98"
 async-trait = "0.1.86"
+base64 = { version = "0.22.1", features = ["alloc"] }
 bincode = "1.3.3"
 bitmaps = "3.2.1"
 buck-resources = "1"
