[hyperactor] mesh: host meshes
Pull Request resolved: https://github.com/meta-pytorch/monarch/pull/1245

Introduce host mesh support, and provide a way to allocate a HostMesh from an `Alloc`, so that we can use existing allocators seamlessly.

This is done by "trampolining" through an agent actor in the Alloc-owned proc mesh:

```
                       ┌ ─ ─┌────────────────────┐
                            │allocated Proc:     │
                       │    │ ┌─────────────────┐│
                            │ │TrampolineActor  ││
                       │    │ │ ┌──────────────┐││
                            │ │ │Host          │││
              ┌────┬ ─ ┘    │ │ │ ┌──────────┐ │││
           ┌─▶│Proc│        │ │ │ │HostAgent │ │││
           │  └────┴ ─ ┐    │ │ │ └──────────┘ │││
           │  ┌────┐        │ │ │             ██████
┌────────┐ ├─▶│Proc│   │    │ │ └──────────────┘││ ▲
│ Client │─┤  └────┘        │ └─────────────────┘│ listening channel
└────────┘ │  ┌────┐   └ ─ ─└────────────────────┘
           ├─▶│Proc│
           │  └────┘
           │  ┌────┐
           └─▶│Proc│
              └────┘
                ▲

         `Alloc`-provided
               procs

```
ghstack-source-id: 310826849

Differential Revision: [D82649792](https://our.internmc.facebook.com/intern/diff/D82649792/)

--- a/hyperactor_mesh/Cargo.toml
+++ b/hyperactor_mesh/Cargo.toml
@@ -83,6 +83,7 @@ tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter", "
 
 [dev-dependencies]
 bytes = { version = "1.10", features = ["serde"] }
+itertools = "0.14.0"
 maplit = "1.0"
 proptest = "1.5"
 timed_test = { version = "0.0.0", path = "../timed_test" }
