--- a/hyperactor/Cargo.toml
+++ b/hyperactor/Cargo.toml
@@ -74,6 +74,7 @@ serde_bytes = "0.11"
 serde_json = { version = "1.0.140", features = ["alloc", "float_roundtrip", "raw_value", "unbounded_depth"] }
 serde_multipart = { version = "0.0.0", path = "../serde_multipart" }
 serde_yaml = "0.9.25"
+shell-quote = "0.7.2"
 signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
 strum = { version = "0.27.1", features = ["derive"] }
 thiserror = "2.0.12"
@@ -86,6 +87,7 @@ unicode-ident = "1.0.12"
 
 [dev-dependencies]
 buck-resources = "1"
+indoc = "2.0.2"
 maplit = "1.0"
 proptest = "1.5"
 tempfile = "3.22"
