--- a/hyperactor/Cargo.toml
+++ b/hyperactor/Cargo.toml
@@ -93,6 +93,7 @@ maplit = "1.0"
 proptest = "1.5"
 tempfile = "3.22"
 timed_test = { version = "0.0.0", path = "../timed_test" }
+tokio-test = "0.4.4"
 tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter", "json", "local-time", "parking_lot", "registry"] }
 tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
 
