Simplify CI to build macOS wheels only
Remove broken build-cpu and test jobs that referenced non-existent
workflows. CI now builds macOS ARM64 wheels with USE_TENSOR_ENGINE=0
for all Python versions on every PR/push.

--- a/.github/workflows/build-wheels-no-tensor.yml
+++ b/.github/workflows/build-wheels-no-tensor.yml
@@ -16,6 +16,23 @@ on:
         required: false
         type: boolean
         default: false
+  workflow_call:
+    inputs:
+      python-versions:
+        description: 'Python versions to build (comma-separated, e.g., "3.10,3.11,3.12")'
+        type: string
+        required: false
+        default: '3.10,3.11,3.12,3.13'
+      release-tag:
+        description: 'GitHub release tag to upload wheels to (leave empty to skip upload)'
+        type: string
+        required: false
+        default: ''
+      create-release:
+        description: 'Create a new release if tag does not exist'
+        type: boolean
+        required: false
+        default: false
 
 jobs:
   prepare:
