Use compact JSON output in matrix preparation
Add -c flag to jq to output compact JSON on a single line, fixing
multiline format error in GITHUB_OUTPUT.

--- a/.github/workflows/build-wheels-no-tensor.yml
+++ b/.github/workflows/build-wheels-no-tensor.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Parse Python versions
         id: set-matrix
         run: |
-          versions=$(echo '${{ inputs.python-versions }}' | jq -R 'split(",") | map(gsub(" "; ""))')
+          versions=$(echo '${{ inputs.python-versions }}' | jq -Rc 'split(",") | map(gsub(" "; ""))')
           echo "matrix={\"python-version\":$versions}" >> $GITHUB_OUTPUT
 
   build-macos:
